<?xml version="1.0" encoding="utf-8"?><!-- being used-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/blue_gradient_background">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/public_radio_string"
        android:id="@+id/current_station_banner"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:padding="20dp"
        android:textSize="30sp"/>

    <FrameLayout
        android:id="@+id/wave_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.92"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/current_station_banner"
        android:layout_above="@+id/station_control_container">
    </FrameLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/ad_image_view"
        android:background="@drawable/writers_guild"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:focusableInTouchMode="true"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_above="@+id/ad_image_view"
        android:layout_centerHorizontal="true"
        android:weightSum="1"
        android:gravity="bottom|center"
        android:id="@+id/station_control_container">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sports_station_string"
                android:id="@+id/prev_station_text_view"
                android:textSize="18sp"/>

            <ImageButton
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:id="@+id/previous_station_button"
                android:background="@drawable/back_black"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|bottom"
            android:gravity="center"
            android:layout_weight="0.38">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank_place_holder"
                android:id="@+id/warning_text_view"
                android:layout_gravity="center_horizontal"/>

            <ImageButton
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:id="@+id/plav_pause_button"
                android:background="@drawable/play_red"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jazz_station_string"
                android:id="@+id/next_station_text_view"
                android:textSize="18sp"/>

            <ImageButton
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:id="@+id/next_station_button"
                android:background="@drawable/forward_black"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>